-- V.22 -- 05/10/2025 --
Mobile support for icons on the home page

-- V.21 -- 05/10/2025 --
Home page conversion to Starfield
    Floating orbs for homepage add some fun to it.
        In the future I want to make these float around and bounce off objects.
All pages converted to Starfield background

-- V.20 -- 05/10/2025 --
CrediTrust AI:
    Subtitle fixed
    Page added to reflect other cards

Revenue Prediction App
    Contact page removed

-- V.19 -- 05/10/2025 --
Freelance music page fixed. No AI hallucinations remain


-- V.18 -- 05/10/2025 --
Changelog added

Cards now have a type showing the user what their deployment status is (archived, demo, live)

Major styling change:
    styles.css retains everything that the root page needs
    projects.css now contains all of the styling for projects
    bio.css now contains all of the styling for the bio section

My Company page changes:
    styling changed over to projects.css
    reduced the amount of information. This is not my company's website. It's mine

Bio changes:
    Connect links at the bottom open a new tab