@@ -44,50 +44,41 @@ nav ul {
   margin: 0;
   display: flex;
   gap: 1rem;
+  align-items: stretch;  /* Makes all items same height */
 }
 
 nav ul li {
   margin: 0;
+  display: flex;  /* Makes li a flex container */
+}
+
+.nav-links {
+  flex-wrap: wrap ;
 }
 
 .nav-link {
-  display: inline-block;
-  padding: 0.8rem 1.5rem;
+  display: flex;  /* Changed to flex */
+  align-items: center;  /* Vertically centers the text */
+  justify-content: center;  /* Horizontally centers the text */
+  padding: 0.05rem 1rem;
   background: transparent;
+  border: 2px solid #ff5722;
   color: white;
   text-decoration: none;
   border-radius: 8px;
   font-weight: 500;
   transition: all 0.2s ease;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  min-height: 48px;  /* Sets a minimum height for all buttons */
+  max-width: 70px;
+  height: 100%;  /* Takes full height of parent li */
 }
 
-.home-link:hover {
-  background-color: #ff0000c2;
+.nav-link:hover {
+  background-color: #000000;
   transform: translateY(-2px);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-  color: black;
-}
-
-.bio-link:hover {
-  background-color: rgba(255, 166, 0, 0.788);
-  transform: translateY(-2px);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-  color: black;
-}
-
-.s2-link:hover {
-  background-color: #ffee0093;
-  transform: translateY(-2px);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-  color: black;
-}
-
-.blog-link:hover {
-  background-color: #51ff0093;
-  transform: translateY(-2px);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-  color: black;
+  color: #ff5722;
 }
 
 nav a:active {
@@ -122,7 +113,7 @@ nav a:active {
   font-size: 1rem;
   border: 1px solid rgba(255, 255, 255, 0.2);
   border-radius: 8px;
-  margin: 1.5rem auto;
+  margin: auto auto;
   display: block;
   background: rgba(255, 255, 255, 0.05);
   color: #ffffff;
@@ -252,7 +243,7 @@ nav a:active {
 }
 
 .card-title {
-  margin-top: 0;
+  margin-top: 2rem;
   margin-bottom: 0.75rem;
   font-size: 1.5rem;
   font-weight: 700;
@@ -807,7 +798,9 @@ nav a:active {
 .banner-image {
   width: 100%;
   display: block;
+  position: relative;
   border-radius: 25px;
+  filter: blur(8px) opacity(0.5)
 }
 
 /* Banner content positioning */
@@ -820,7 +813,7 @@ nav a:active {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 10%;
+  padding: 0 20%;
 }
 
 /* Profile photo scaling */
@@ -861,13 +854,12 @@ nav a:active {
 .banner-title {
   font-size: 4vw; /* Viewport-relative sizing */
   font-family: "Source Code Pro", monospace;
-  text-shadow: 0.5vw 0.5vw 0.2vw rgba(0, 0, 0, 0.7);
   white-space: nowrap; /* Prevent wrapping */
 }
 
 /* Bracket and name color */
 .bracket {
-  color: #d63031; /* Alabama crimson */
+  color: #ff5722; /* Alabama crimson */
   display: inline-block;
 }
 
